Fixed problem where photos were being stretched.

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ nav ul li a span.rotate{
   .content-portfolio .header{
     font-size: 45px;
     font-weight: 600;
-    padding: 10px 10px;
+    padding: 50px;
   }
   .content p{
     font-size: 30px;
@@ -175,3 +175,9 @@ nav ul li a span.rotate{
     box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
     max-width: 100%;
   }
+
+.content-portfolio .grid video {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
